--- a/src/styles/next.css
+++ b/src/styles/next.css
@@ -9,7 +9,7 @@
   border: none;
   font-size: 2em;
   color: #eaeaea;
-  background-color: #44168b;
+  background-color: #823ab7;
 }
 .confirm-div {
   display: flex;
